bug 856777 - observe plugin-info-updated in nsPluginArray, not Navigator r=khuey